# celegans-comportamiento

./: .gitignore  generate_all_figures_standardized.py  generate_paper_figures.py  generate_paper_figures_v2.py  generate_trajectory_visualizations.py  methodology_levy_flight.py  methodology_ml_screening.py  methodology_tda.py  methodology_unsupervised_states.py  preprocess_data.py  pyproject.toml  run_batch_analysis.py  summarize_levy_analysis.py  summarize_ml_screening.py  summarize_tda.py  summarize_unsupervised_analysis.py  utils_data.py
Datos/BR5270/: 1458_BR5270_CONTROL.csv  1459_BR5270_CONTROL.csv  1505_BR5270_ETANOL.csv  1511_BR5270_0,3uMCBD.csv  1517_BR5270_ET1.1000.csv  1548_BR5270_CONTROL.csv  1554_BR5270_ETANOL.csv  1600_BR5270_0,3uMCBD.csv  1605_BR5270_ET1.1000.csv  1629_BR5270_CONTROL.csv  1634_BR5270_0,3uMCBD.csv  1640_BR5270_ET1.1000.csv
Datos/BR5271/: 1645_BR5271_CONTROL.csv  1651_BR5271_0,3uMCBD.csv  1656_BR5271_ET1.1000.csv  1700_BR5271_CONTROL.csv  1706_BR5271_CONTROL.csv  1712_BR5271_ETANOL.csv  1717_BR5271_ETANOL.csv  1723_BR5271_CONTROL.csv  1728_BR5271_ETANOL.csv  1732_BR5271_CONTROL.csv  1737_BR5271_CONTROL.csv  1743_BR5271_0,3uMCBD.csv  1748_BR5271_0,3uMCBD.csv  1754_BR5271_ET1.1000.csv  1759_BR5271_ET1.1000.csv
Datos/N2 ATENEA 25_07_2025/: 1611_N2_CONTROL.csv  1616_N2_ETANOL.csv  1708_N2_ETANOL.csv  (+9 more)
Documentation/: SmartManual.md  agent_context.md  methodology_comparison.md  prompt.md  proposed_methodologies.md  strains.md
Paper/: final_paper_section_v10.md  final_paper_section_v11.md  final_paper_section_v12.md  final_paper_section_v13.md
(+317 files in other folders)
