[project]
name = "comportamiento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gudhi>=3.11.0",
    "joblib>=1.3.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "powerlaw>=1.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "xgboost>=2.0.0",
]
